<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal"
    android:backgroundTint="@color/white"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:background="@color/azuloscurosena"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp"
            android:text="@string/bienvenido"
            android:textColor="@color/white"
            android:textSize="34dp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="160dp"
            android:background="@color/azuloscurosena"
            android:src="@drawable/iconuser" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dtv"
        android:textColor="@color/azuloscurosena"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTestVocacional"
        android:layout_width="400dp"
        android:layout_height="52dp"

        android:background="@drawable/bg_boton_test"
        android:elevation="6dp"
        android:text="Test Vocacional"

        android:textColor="@android:color/white"

        android:textSize="20dp"
        app:backgroundTint="@null"
        app:cornerRadius="18dp"

        app:icon="@drawable/ic_arrow_right"
        app:iconGravity="end"
        app:iconPadding="10dp"
        app:iconSize="40dp"

        app:iconTint="@android:color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.148"
        app:rippleColor="#22000000" />

    <TextView
        android:id="@+id/txtAccesos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ar"
        android:textColor="@color/azuloscurosena"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

    <GridLayout
        android:id="@+id/gridAccesos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_margin="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/txtAccesos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        android:background="@drawable/bg_boton_acceso"
        android:padding="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#ECEFF1"
            android:padding="8dp"
            android:src="@drawable/ic_map"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mapa Ctpi"
            android:textSize="20dp"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        android:background="@drawable/bg_boton_acceso"
        android:padding="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#ECEFF1"
            android:padding="8dp"
            android:src="@drawable/ic_resultados"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mis resultados"
            android:textSize="20dp"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        android:background="@drawable/bg_boton_acceso"
        android:padding="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#ECEFF1"
            android:padding="8dp"
            android:src="@drawable/ic_settings"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Configuración"
            android:textSize="20dp"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="8dp"
        android:background="@drawable/bg_boton_acceso"
        android:padding="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#ECEFF1"
            android:padding="8dp"
            android:src="@drawable/ic_recursos"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recursos"
            android:textSize="20dp"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    </GridLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/gato"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        android:text="@string/avi"
        android:textSize="20dp"
        android:textColor="@color/azuloscurosena"/>


</androidx.constraintlayout.widget.ConstraintLayout>